...

        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        app:layout_anchor="@id/app_bar"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_anchorGravity=""
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

...
